--- a/photograph/index.html
+++ b/photograph/index.html
@@ -16,13 +16,10 @@ layout: default
 	<body>
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
-				<img width="175" height="175" style="border-radius:50%;" src="/img/avatar.jpg">
-				<h1>Hux</h1>
-				</header>
-				<div class="main">
-				
-				</ul>
-			</div>
+				<img width="175" height="175" style="border-radius:50%;" src="/img/avatar.png">
+				<h1></h1>
+			</header>
+			
 		</div>
 	</body>
 </html>
